[package]
name = "robomesh"
version = "0.1.0"
edition = "2021"

[lib]
name = "robomesh"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
urdf-rs = "0.6"
k = "0.32"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder"] }
thiserror = "1.0"
csv = "1.3"
tobj = "3.2"
stl_io = "0.4"
