[package]
name = "robomesh"
version = "0.1.1"
edition = "2021"

[lib]
name = "robomesh"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["pyo3", "pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.22", optional = true }
urdf-rs = "0.6"
k = "0.32"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.24", default-features = false, features = ["png", "gif", "jpeg"] }
thiserror = "1.0"
csv = "1.3"
tobj = "3.2"
stl_io = "0.4"
kiss3d = "0.37"
