[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "robomesh"
version = "0.1.1"
description = "Python bindings for the robomesh URDF renderer"
authors = [{ name = "robomesh developers" }]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Graphics",
]
dependencies = []

[tool.maturin]
manifest-path = "../Cargo.toml"
bindings = "pyo3"
module-name = "robomesh"
features = ["python"]

[dependency-groups]
dev = [
  "maturin>=1.6,<2.0",
]
